Bug 158965 - Find Record: Similarities dialog won't appear
Summary: Find Record: Similarities dialog won't appear
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:7.6.5 target:24....
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2024-01-02 07:28 UTC by Robert Großkopf
Modified: 2024-01-05 10:35 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (11.62 KB, text/plain)
2024-01-03 12:13 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2024-01-02 07:28:17 UTC
Open any database file.
Open a table.
Start "Find Record" (Ctrl+F).
Klick Settings → Similarity Search.
Klick on "Similarities".

Up to LO 7.6 a dialog will appear.
Since LO 7.6 nothing happens.

Tested with
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 6; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

also with older versions - LO 7.5.5.2 will show the dialog, LO 7.6.0.3 won't show it on the same system. LO 24.2 Beta 1 also won't show the dialog.
Comment 1 jcsanz 2024-01-02 13:10:18 UTC
Confirmed with:
-----------------
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
----------------
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d08767b890e723cd502b1c61d250924f695eb98
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded


Also confirmed the similarity button works with:
----------
Version: 7.5.6.2 (X86_64) / LibreOffice Community
Build ID: f654817fb68d6d4600d7d2f6b647e47729f55f15
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
-----------
Comment 2 Julien Nabet 2024-01-03 12:13:28 UTC
Created attachment 191728 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2024-01-03 12:14:58 UTC
Regression from
https://cgit.freedesktop.org/libreoffice/core/commit/?id=36343165c251e30c700360cc5c4266f576d4ac00
cui: Make SimilaritySearch dialog async and enable use for jsdialog

Reverting the changes in cui/source/dialogs/cuifmsearch.cxx locally fixes the crash.
Comment 4 Xisco Faulí 2024-01-04 11:24:33 UTC
(In reply to Julien Nabet from comment #3)
> Regression from
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=36343165c251e30c700360cc5c4266f576d4ac00
> cui: Make SimilaritySearch dialog async and enable use for jsdialog
> 
> Reverting the changes in cui/source/dialogs/cuifmsearch.cxx locally fixes
> the crash.

Hi Caolán,
Since this issue is about async dialogs, I thought you might be interested
Comment 5 Caolán McNamara 2024-01-04 16:05:38 UTC
I can help here
Comment 6 Commit Notification 2024-01-05 08:52:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30f4044ff45403b7f69df4f49c3d58ccc8b3fdce

Resolves: tdf#158965 Find Record: Similarities dialog doesn't appear

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-01-05 09:37:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5a731afcaa717bdabb5bebd1e625984c89ec601f

Resolves: tdf#158965 Find Record: Similarities dialog doesn't appear

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-01-05 10:12:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/fcf940f5c480160cf837ff1a84a988605b882bf2

Resolves: tdf#158965 Find Record: Similarities dialog doesn't appear

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2024-01-05 10:35:29 UTC
With master sources updated today (so with Caolán's patch), I don't reproduce the assertion and get the dialog appear.
Thank you Caolán!