Resolves: tdf#158965 Find Record: Similarities dialog doesn't appear

and assert in DBG_UTIL mode

regression since:

commit 36343165c251e30c700360cc5c4266f576d4ac00
Date:   Wed Jan 25 11:07:28 2023 +0000

    cui: Make SimilaritySearch dialog async and enable use for jsdialog

Change-Id: Iee2071874836ccf8a1ab10fbc6d6b3c491fd04ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161624
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>